--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -28,15 +28,13 @@
 
             <form class="m-t" role="form" action="index.html">
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="用户名" required="">
+                    <input id="account" type="email" class="form-control" placeholder="账号" required="">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="密码" required="">
+                    <input id="password"type="password" class="form-control" placeholder="密码" required="">
                 </div>
                 <button type="submit" class="btn btn-primary block full-width m-b">登 录</button>
-
-
-                <p class="text-muted text-center"> <a href="login.html#"><small>忘记密码了？</small></a> | <a href="register.html">注册一个新账号</a>
+                <p class="text-muted text-center"> <a href="login.html#"><small>忘记密码？</small></a> | <a href="register.html">注册一个新账号</a>
                 </p>
 
             </form>
@@ -46,8 +44,37 @@
     <!-- Mainly scripts -->
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/bootstrap.min.js?v=3.4.0"></script>
+    <script>
+        let accountElement = document.getElementById("account");
+        accountElement.onblur = checkAccount;
+        function checkAccount() {
+        let account = accountElement.value.trim();
+        var account_reg = /^\w{6,12}$/;
+        var flag = account_reg.test(account);
+        if (flag){
+            accountElement.style.border = "";
+        } else {
+            accountElement.style.border = "1px solid red";
+        }
+        return flag;
+    }
 
-
+        let passwordElement = document.getElementById("password");
+        passwordElement.onblur = checkPassword;
+        function checkPassword() {
+            var password = passwordElement.value.trim();  //获取值
+            var reg_password = /^\w{8,20}$/  //单词类型\w，8-20用{}
+            var flag = reg_password.test(password);
+            if(flag) {
+                //校验通过
+                passwordElement.style.border = "";
+            } else {
+                //校验失败
+                passwordElement.style.border = "1px solid red";
+            }
+            return flag;
+        }
+    </script>
 </body>
 
 </html>
