--- a/src/main/webapp/left_sidebar.html
+++ b/src/main/webapp/left_sidebar.html
@@ -7,8 +7,10 @@
                     <div class="dropdown profile-element">
                         <!-- 头像 <span> <img alt="image" class="img-circle" src="img/profile_small.jpg" /> </span>-->
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-                                <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">admin</strong>
-                             </span>  <span class="text-muted text-xs block">系统管理员 <b class="caret"></b></span> </span>
+                            <span class="clear">
+                                <span id="span_user_id" class="block m-t-xs"><strong class="font-bold">admin</strong></span>
+                                <span id="span_username" class="text-muted text-xs block">系统管理员<b class="caret"></b></span>
+                            </span>
                         </a>
                         <!--登陆位置的下拉栏-->
                         <ul class="dropdown-menu animated fadeInRight m-t-xs">
@@ -23,7 +25,7 @@
                         </ul>
                     </div>
                     <div class="logo-element">
-                        H+
+                        666
                     </div>
 
                 </li>
@@ -31,19 +33,9 @@
                     <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">主页</span></a>
                 </li>
                 <li>
-                    <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">信箱 </span><span class="label label-warning pull-right">16</span></a>
-                    <ul class="nav nav-second-level">
-                        <li><a href="mailbox.html">收件箱</a>
-                        </li>
-                        <li><a href="mail_detail.html">查看邮件</a>
-                        </li>
-                        <li><a href="mail_compose.html">写信</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
                     <a href="index.html#"><i class="fa fa-edit"></i> <span class="nav-label">表单</span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
+                        <li><a href="test_center_form.html">个人中心测试页面</a></li>
                         <li><a href="form_use_or_borrow.html">采购申请表</a></li>
                         <li><a href="form_use_or_borrow.html">领用/借用申请表</a></li>
                         <li><a href="form_waste.html">废弃物品申请表</a></li>
@@ -58,25 +50,20 @@
                 <li>
                     <a href="index.html#"><i class="fa fa-desktop"></i> <span class="nav-label">页面</span></a>
                     <ul class="nav nav-second-level">
-                        <li><a href="projects.html">项目</a>
-                        </li>
-                        <li><a href="invoice.html">单据</a>
-                        </li>
-                        <li><a href="login.html">登录</a>
-                        </li>
-                        <li><a href="register.html">注册</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="index.html#"><i class="fa fa-table"></i> <span class="nav-label">表格</span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level">
-                        <li><a href="table_basic.html">基本表格</a>
-                        </li>
-                        <li><a href="table_data_tables.html">数据表格(DataTables)</a>
+                        <li><a href="login.html">登录</a></li>
+                        <li><a href="register.html">注册</a></li>
                     </ul>
                 </li>
             </ul>
 
         </div>
     </nav>
+
+    <script>
+        $.get("user/findOne", {}, function (data) {
+            $("#span_username").html(data.name)
+            $("#span_user_id").html(data.account)
+            //$("#login").css("display", "inline")
+            //$("#login_out").css("display", "none")
+        })
+    </script>
